--- a/kadai-html.html
+++ b/kadai-html.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <p>ここはヘッダーです。</p>
+            ここはヘッダーです。
         </header>
         <div id="wrapper">
             <div id="main">
@@ -19,23 +19,21 @@
                 <p>Webページの構成の説明が入ります。</p>
                 <h3>Webページの表示</h3>
                 <p>Webページの表示の説明が入ります。</p>
-            </div>
+        </div>
             <nav id="menu">
-                <nav>
-                    <ul>
-                        <li>Webサイトの仕組み</li>
-                        <li>HTMLとCSSの概要</li>
-                        <li>HTMLの基本</li>
-                        <li>head要素内の記述</li>
-                        <li>body要素内の記述</li>
-                        <li>id属性とclass属性の設定</li>
-                        <li>HTMLチュートリアル</li>
-                    </ul>
-                </nav>
+                <ul>
+                　　<li>Webサイトの仕組み</li>
+                　　<li>HTMLとCSSの概要</li>
+                    <li>HTMLの基本</li>
+                　　<li>head要素内の記述</li>
+                    <li>body要素内の記述</li>
+                    <li>id属性とclass属性の設定</li>
+                    <li>HTMLチュートリアル</li>
+                </ul>
             </nav>
         </div>
         <footer>
-            <p>ここはフッターです。</p>
+            ここはフッターです。
         </footer>
     </body>
 </html>
